Implemented catalog to add a new ingredient